--- a/index.html
+++ b/index.html
@@ -6060,7 +6060,7 @@
                           <p style="text-align:center;white-space:pre-wrap;" class=""><em>0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A</em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Support</em></strong></span><em> </em></p>
-                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>support@shiba6900.me</em></p>
+                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>support@xtheplanet.space</em></p>
                         </div>
                       </div>
                     </div>
