--- a/index.html
+++ b/index.html
@@ -3306,14 +3306,14 @@
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://app.uniswap.org/#/swap?outputCurrency=0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">Uniswap</a>
+                          <a href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">Uniswap</a>
                         </div>
 
 
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://dexscreener.com/arbitrum/0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">DexScreener</a>
+                          <a href="https://dexscreener.com/ethereum/0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">DexScreener</a>
                         </div>
 
 
@@ -3330,14 +3330,14 @@
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://twitter.com/6900Shiba6900" target="_blank">Twitter</a>
+                          <a href="https://twitter.com/X_The_Planet" target="_blank">Twitter</a>
                         </div>
 
 
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://t.me/Shiba6900" target="_blank">Telegram</a>
+                          <a href="https://t.me/X_The_Planet" target="_blank">Telegram</a>
                         </div>
 
 
@@ -3540,14 +3540,14 @@
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://app.uniswap.org/#/swap?outputCurrency=0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">Uniswap</a>
+                          <a href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">Uniswap</a>
                         </div>
 
 
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://dexscreener.com/arbitrum/0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">Dexscreener</a>
+                          <a href="https://dexscreener.com/ethereum/0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">Dexscreener</a>
                         </div>
 
 
@@ -3564,14 +3564,14 @@
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://twitter.com/6900Shiba6900" target="_blank">Twitter</a>
+                          <a href="https://twitter.com/X_The_Planet" target="_blank">Twitter</a>
                         </div>
 
 
 
 
                         <div class="header-nav-folder-item header-nav-folder-item--external">
-                          <a href="https://t.me/Shiba6900" target="_blank">Telegram</a>
+                          <a href="https://t.me/X_The_Planet" target="_blank">Telegram</a>
                         </div>
 
                       </div>
@@ -3787,11 +3787,11 @@
                     </div>
 
                     <div class="container header-menu-nav-item header-menu-nav-item--external">
-                      <a href="https://app.uniswap.org/#/swap?outputCurrency=0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">Uniswap</a>
+                      <a href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">Uniswap</a>
                     </div>
 
                     <div class="container header-menu-nav-item header-menu-nav-item--external">
-                      <a href="https://dexscreener.com/arbitrum/0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A" target="_blank">DexScreener</a>
+                      <a href="https://dexscreener.com/ethereum/0xC7Effe090974FfE400aEe84106337827CA4DE0c0" target="_blank">DexScreener</a>
                     </div>
 
                   </div>
@@ -3815,11 +3815,11 @@
                     </div>
 
                     <div class="container header-menu-nav-item header-menu-nav-item--external">
-                      <a href="https://twitter.com/6900Shiba6900" target="_blank">Twitter</a>
+                      <a href="https://twitter.com/X_The_Planet" target="_blank">Twitter</a>
                     </div>
 
                     <div class="container header-menu-nav-item header-menu-nav-item--external">
-                      <a href="https://t.me/Shiba6900" target="_blank">Telegram</a>
+                      <a href="https://t.me/X_The_Planet" target="_blank">Telegram</a>
                     </div>
 
                   </div>
@@ -5262,7 +5262,7 @@
                         <div class="sqs-block-button-container sqs-block-button-container--center"
                           data-animation-role="button" data-alignment="center" data-button-size="large"
                           data-button-type="secondary">
-                          <a href="https://app.uniswap.org/#/swap?outputCurrency=0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A"
+                          <a href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xC7Effe090974FfE400aEe84106337827CA4DE0c0"
                             class="sqs-block-button-element--large sqs-button-element--secondary sqs-block-button-element"
                             target="_blank">
                             BUY
@@ -5668,7 +5668,7 @@
                         <div class="sqs-block-button-container sqs-block-button-container--center"
                           data-animation-role="button" data-alignment="center" data-button-size="large"
                           data-button-type="secondary">
-                          <a href="https://dexscreener.com/arbitrum/0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A"
+                          <a href="https://dexscreener.com/ethereum/0xC7Effe090974FfE400aEe84106337827CA4DE0c0"
                             class="sqs-block-button-element--large sqs-button-element--secondary sqs-block-button-element"
                             target="_blank">
                             CHART
@@ -6057,7 +6057,7 @@
                           <p style="text-align:center;white-space:pre-wrap;" class=""><em>2%</em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Address</em></strong><em> </em></span></p>
-                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A</em></p>
+                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>0xC7Effe090974FfE400aEe84106337827CA4DE0c0</em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Support</em></strong></span><em> </em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><em>support@xtheplanet.space</em></p>
@@ -6348,7 +6348,7 @@
 
                       <div class="sqs-html-content">
                         <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><a
-                            target="_blank" href="https://app.uniswap.org/#/swap?outputCurrency=0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A">Uniswap</a> • <a target="_blank" href="https://dexscreener.com/arbitrum/0x67cc321Cb929b9c231cA6f5F4E1C4406D5ab763A">Dexscreener</a> • <a target="_blank" href="https://twitter.com/6900Shiba6900">Twitter</a> • <a target="_blank" href="https://t.me/Shiba6900">Telegram</a></p>
+                            target="_blank" href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xC7Effe090974FfE400aEe84106337827CA4DE0c0">Uniswap</a> • <a target="_blank" href="https://dexscreener.com/ethereum/0xC7Effe090974FfE400aEe84106337827CA4DE0c0">Dexscreener</a> • <a target="_blank" href="https://twitter.com/X_The_Planet">Twitter</a> • <a target="_blank" href="https://t.me/X_The_Planet">Telegram</a></p>
                       </div>
 
 
