--- a/index.html
+++ b/index.html
@@ -4214,15 +4214,15 @@
                         <div class="sqs-html-content">
                           <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text">
                               <h1 style="text-align:center;white-space:pre-wrap;"><span
-                                  class="sqsrte-text-color--white"><strong>$XTest </strong>began as a </span></h1>
+                                  class="sqsrte-text-color--white"><strong>$XPlanet </strong>began as a </span></h1>
                             </span></div>
                           <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text">
                               <h1 style="text-align:center;white-space:pre-wrap;"><span
                                   class="sqsrte-text-color--white">bold experiment…</span> </h1>
                             </span></div>
-                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Born from $XTest. </p>
-                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Governed by $XTest. </p>
-                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Powered by $XTest.
+                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Born from $XPlanet. </p>
+                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Governed by $XPlanet. </p>
+                          <p style="text-align:center;white-space:pre-wrap;" class="sqsrte-large">Powered by $XPlanet.
                           </p>
                         </div>
 
@@ -5974,7 +5974,7 @@
                         <div class="sqs-html-content">
                           <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text">
                               <h2 style="text-align:center;white-space:pre-wrap;"><span
-                                  class="sqsrte-text-color--accent">How To Buy <strong><em>$XTest&nbsp;</em></strong>?</span></h2>
+                                  class="sqsrte-text-color--accent">How To Buy <strong><em>$XPlanet&nbsp;</em></strong>?</span></h2>
                             </span></div>
                         </div>
                       </div>
@@ -6048,13 +6048,13 @@
                       <div class="sqs-block-content">
 
                         <div class="sqs-html-content">
-                          <p style="text-align:center;white-space:pre-wrap;" class=""><strong><em>To buy Turbo Token, follow these simple steps:</em></strong></p>
+                          <p style="text-align:center;white-space:pre-wrap;" class=""><strong><em>To buy Xplanet Token, follow these simple steps:</em></strong></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Total Supply</em></strong><em> </em></span></p>
-                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>1.000.000.000 $XTest</em></p>
+                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>1.000.000.000 $XPlanet</em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Tax Buy/Sell</em></strong><em> </em></span></p>
-                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>2%</em></p>
+                          <p style="text-align:center;white-space:pre-wrap;" class=""><em>1%</em></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><span
                               class="sqsrte-text-color--accent"><strong><em>Address</em></strong><em> </em></span></p>
                           <p style="text-align:center;white-space:pre-wrap;" class=""><em>0xC7Effe090974FfE400aEe84106337827CA4DE0c0</em></p>
